2007-11-21  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/being.cpp: Added interpolation of tile offset for intermediate
	steps in long moves.

2007-11-16  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/resources/resourcemanager.h, src/resources/resource.h,
	src/resources/resourcemanager.cpp, src/resources/resource.cpp: Delayed
	resource deletion by 30 seconds.
	* src/net/connection.cpp, src/resources/mapreader.cpp,
	src/net/network.cpp: Reduced noise in log file.
	* src/resources/image.cpp: Sped up recoloring of transparent pixels.

2007-11-16  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/log.cpp, src/utils/wingettimeofday.h: Removed useless win32
	implementation of gettimeofday.
	* src/log.cpp, tmw.cbp: Fixed minor issues.

2007-11-16  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/floor_item.cpp, src/localplayer.cpp, src/item.cpp,
	src/inventory.h, src/gui/sell.cpp, src/gui/equipmentwindow.cpp,
	src/gui/shop.cpp, src/gui/shoplistbox.cpp, src/gui/shop.h,
	src/gui/itemshortcutcontainer.cpp, src/gui/buy.cpp,
	src/gui/itemcontainer.cpp, src/inventory.cpp, src/item.h,
	src/equipment.h, src/shopitem.cpp, src/CMakeLists.txt,
	src/floor_item.h, src/net/inventoryhandler.cpp, src/equipment.cpp,
	src/localplayer.h, src/Makefile.am, src/resources/iteminfo.h,
	src/resources/itemdb.cpp, src/resources/iteminfo.cpp, src/shopitem.h:
	Moved item icon from ItemInfo class to the Item class, so that it can
	be loaded on demand. Results in faster startup time and reduced memory
	usage.

2007-11-15  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/main.cpp: Disabled update loading.

2007-11-15  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/maps/new_4-1.tmx: Added npc.
	* data/maps/new_5-1.tmx: Added npcs.
	* data/maps/new_5-1.tmx, data/maps/new_6-1.tmx: Added monsters on map 5
	and some fixes, added npcs to map 6.

2007-11-14  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* po/it.po: Updated Italian translation.
